cleanup notebooks and use utility file

--- a/notebooks/01_dataset_exploration.ipynb
+++ b/notebooks/01_dataset_exploration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7e5d5cc5",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,7 @@
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -60,6 +61,12 @@
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
     "TRAIN_ANN_ROOT = DATA_ROOT / \"DETRAC-Train-Annotations\"\n",
     "TEST_ANN_ROOT = DATA_ROOT / \"DETRAC-Test-Annotations\"\n",
+    "SRC_DIR = PROJECT_ROOT / \"src\"\n",
+    "\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
     "print(\"Images root:\", IMAGES_ROOT)\n",
     "print(\"Train annotations root:\", TRAIN_ANN_ROOT)\n",
@@ -117,67 +124,6 @@
     "  - `id` – vehicle track ID\n",
     "  - `bbox` – `[left, top, width, height]`\n",
     "  - `class` – vehicle type (car, bus, van, truck, etc.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b17fc0b4",
-   "metadata": {},
-   "source": [
-    "#### Annotation Loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "466e36a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_detrac_annotations(xml_path: Path):\n",
-    "    \"\"\"\n",
-    "    Parse a UA-DETRAC XML file into a dict:\n",
-    "    { frame_num (int): [ { 'id': str, 'bbox': [x, y, w, h], 'class': str }, ... ] }\n",
-    "    \"\"\"\n",
-    "    tree = ET.parse(str(xml_path))\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    annotations = {}\n",
-    "\n",
-    "    for frame in root.findall(\"frame\"):\n",
-    "        frame_num = int(frame.get(\"num\"))\n",
-    "\n",
-    "        # DETRAC structure: frame -> target_list -> target\n",
-    "        target_list = frame.find(\"target_list\")\n",
-    "        if target_list is None:\n",
-    "            annotations[frame_num] = []\n",
-    "            continue\n",
-    "\n",
-    "        targets = []\n",
-    "        for target in target_list.findall(\"target\"):\n",
-    "            tid = target.get(\"id\")\n",
-    "\n",
-    "            box = target.find(\"box\")\n",
-    "            attr = target.find(\"attribute\")\n",
-    "            if box is None or attr is None:\n",
-    "                continue\n",
-    "\n",
-    "            left = float(box.get(\"left\"))\n",
-    "            top = float(box.get(\"top\"))\n",
-    "            width = float(box.get(\"width\"))\n",
-    "            height = float(box.get(\"height\"))\n",
-    "            vehicle_class = attr.get(\"vehicle_type\")\n",
-    "\n",
-    "            targets.append({\n",
-    "                \"id\": tid,\n",
-    "                \"bbox\": [left, top, width, height],\n",
-    "                \"class\": vehicle_class,\n",
-    "            })\n",
-    "\n",
-    "        annotations[frame_num] = targets\n",
-    "\n",
-    "    print(f\"Loaded annotations for {len(annotations)} frames from {xml_path.name}\")\n",
-    "    return annotations"
    ]
   },
   {
