--- a/notebooks/02_preprocessing_and_cropping.ipynb
+++ b/notebooks/02_preprocessing_and_cropping.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b067009e",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,7 @@
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -61,71 +62,16 @@
     "\n",
     "TARGET_SIZE = (64, 64)  # (width, height) for CNN inputs\n",
     "OUTPUT_PATH = PROJECT_ROOT / \"outputs\" / \"cropped_vehicle_dataset.npz\"\n",
+    "SRC_DIR = PROJECT_ROOT / \"src\"\n",
+    "\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
     "print(\"Images root:\", IMAGES_ROOT)\n",
     "print(\"Train annotations root:\", TRAIN_ANN_ROOT)\n",
     "print(\"Output dataset path:\", OUTPUT_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7fd08a46",
-   "metadata": {},
-   "source": [
-    "#### Annotation Loader Reuse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "041fd728",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_detrac_annotations(xml_path: Path):\n",
-    "    \"\"\"\n",
-    "    Parse a UA-DETRAC XML file into a dict:\n",
-    "    { frame_num (int): [ { 'id': str, 'bbox': [x, y, w, h], 'class': str }, ... ] }\n",
-    "    \"\"\"\n",
-    "    tree = ET.parse(str(xml_path))\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    annotations = {}\n",
-    "\n",
-    "    for frame in root.findall(\"frame\"):\n",
-    "        frame_num = int(frame.get(\"num\"))\n",
-    "\n",
-    "        # DETRAC structure: frame -> target_list -> target\n",
-    "        target_list = frame.find(\"target_list\")\n",
-    "        if target_list is None:\n",
-    "            annotations[frame_num] = []\n",
-    "            continue\n",
-    "\n",
-    "        targets = []\n",
-    "        for target in target_list.findall(\"target\"):\n",
-    "            tid = target.get(\"id\")\n",
-    "\n",
-    "            box = target.find(\"box\")\n",
-    "            attr = target.find(\"attribute\")\n",
-    "            if box is None or attr is None:\n",
-    "                continue\n",
-    "\n",
-    "            left = float(box.get(\"left\"))\n",
-    "            top = float(box.get(\"top\"))\n",
-    "            width = float(box.get(\"width\"))\n",
-    "            height = float(box.get(\"height\"))\n",
-    "            vehicle_class = attr.get(\"vehicle_type\")\n",
-    "\n",
-    "            targets.append({\n",
-    "                \"id\": tid,\n",
-    "                \"bbox\": [left, top, width, height],\n",
-    "                \"class\": vehicle_class,\n",
-    "            })\n",
-    "\n",
-    "        annotations[frame_num] = targets\n",
-    "\n",
-    "    print(f\"Loaded annotations for {len(annotations)} frames from {xml_path.name}\")\n",
-    "    return annotations"
    ]
   },
   {
