--- a/notebooks/04_vehicle_counting_and_analysis.ipynb
+++ b/notebooks/04_vehicle_counting_and_analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5e1ff075",
    "metadata": {},
    "outputs": [
@@ -52,11 +52,11 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
+    "import sys\n",
     "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "import xml.etree.ElementTree as ET\n",
     "\n",
@@ -72,6 +72,12 @@
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
     "TRAIN_ANN_ROOT = DATA_ROOT / \"DETRAC-Train-Annotations\"\n",
     "OUTPUT_ROOT = PROJECT_ROOT / \"outputs\"\n",
+    "SRC_DIR = PROJECT_ROOT / \"src\"\n",
+    "\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
     "CROPPED_DATA_PATH = OUTPUT_ROOT / \"cropped_vehicle_dataset.npz\"\n",
     "MODELS_DIR = PROJECT_ROOT / \"models\"\n",
@@ -130,66 +136,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125bceb3",
-   "metadata": {},
-   "source": [
-    "#### DETRAC Annotation Loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "05ee9e1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_detrac_annotations(xml_path: Path):\n",
-    "    \"\"\"\n",
-    "    Parse a UA-DETRAC XML file into a dict:\n",
-    "    { frame_num (int): [ { 'id': str, 'bbox': [x, y, w, h], 'class': str }, ... ] }\n",
-    "    \"\"\"\n",
-    "    tree = ET.parse(str(xml_path))\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    annotations = {}\n",
-    "\n",
-    "    for frame in root.findall(\"frame\"):\n",
-    "        frame_num = int(frame.get(\"num\"))\n",
-    "\n",
-    "        target_list = frame.find(\"target_list\")\n",
-    "        if target_list is None:\n",
-    "            annotations[frame_num] = []\n",
-    "            continue\n",
-    "\n",
-    "        targets = []\n",
-    "        for target in target_list.findall(\"target\"):\n",
-    "            tid = target.get(\"id\")\n",
-    "\n",
-    "            box = target.find(\"box\")\n",
-    "            attr = target.find(\"attribute\")\n",
-    "            if box is None or attr is None:\n",
-    "                continue\n",
-    "\n",
-    "            left = float(box.get(\"left\"))\n",
-    "            top = float(box.get(\"top\"))\n",
-    "            width = float(box.get(\"width\"))\n",
-    "            height = float(box.get(\"height\"))\n",
-    "            vehicle_class = attr.get(\"vehicle_type\")\n",
-    "\n",
-    "            targets.append({\n",
-    "                \"id\": tid,\n",
-    "                \"bbox\": [left, top, width, height],\n",
-    "                \"class\": vehicle_class,\n",
-    "            })\n",
-    "\n",
-    "        annotations[frame_num] = targets\n",
-    "\n",
-    "    print(f\"Loaded annotations for {len(annotations)} frames from {xml_path.name}\")\n",
-    "    return annotations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "215f7a4f",
    "metadata": {},
    "source": [
@@ -198,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6634dc35",
    "metadata": {},
    "outputs": [
@@ -211,44 +157,6 @@
     }
    ],
    "source": [
-    "class VehicleClassifier(nn.Module):\n",
-    "    def __init__(self, num_classes: int):\n",
-    "        super().__init__()\n",
-    "        self.features = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(128, 256, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "        )\n",
-    "\n",
-    "        self.classifier = nn.Sequential(\n",
-    "            nn.Flatten(),\n",
-    "            nn.Linear(256 * 4 * 4, 256),  # adjust if needed\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(0.5),\n",
-    "            nn.Linear(256, num_classes),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.features(x)\n",
-    "        x = self.classifier(x)\n",
-    "        return x\n",
-    "\n",
     "num_classes = len(class_to_idx)\n",
     "model = VehicleClassifier(num_classes=num_classes).to(DEVICE)\n",
     "\n",
@@ -257,48 +165,6 @@
     "model.eval()\n",
     "\n",
     "print(\"Loaded model from:\", MODEL_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "884bde0b",
-   "metadata": {},
-   "source": [
-    "#### Prediction Helper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "19d68982",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict_vehicle_class(crop_rgb_np, model, device=DEVICE):\n",
-    "    \"\"\"\n",
-    "    crop_rgb_np: numpy array (H, W, 3) in [0, 1] or [0, 255].\n",
-    "    Returns: (pred_label_str, confidence_float)\n",
-    "    \"\"\"\n",
-    "    if crop_rgb_np.dtype != \"float32\":\n",
-    "        crop = crop_rgb_np.astype(\"float32\")\n",
-    "    else:\n",
-    "        crop = crop_rgb_np.copy()\n",
-    "\n",
-    "    if crop.max() > 1.0:\n",
-    "        crop /= 255.0\n",
-    "\n",
-    "    tensor = torch.from_numpy(crop).permute(2, 0, 1).unsqueeze(0).to(device)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        logits = model(tensor)\n",
-    "        probs = F.softmax(logits, dim=1)\n",
-    "        conf, pred_idx = probs.max(dim=1)\n",
-    "\n",
-    "    pred_idx = int(pred_idx.item())\n",
-    "    conf = float(conf.item())\n",
-    "    pred_label = idx_to_class[pred_idx]\n",
-    "\n",
-    "    return pred_label, conf"
    ]
   },
   {
@@ -384,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dd06e517",
    "metadata": {},
    "outputs": [],
@@ -452,7 +318,7 @@
     "                continue\n",
     "\n",
     "            crop_resized = cv2.resize(crop, target_size)\n",
-    "            pred_label, conf = predict_vehicle_class(crop_resized, model, device=device)\n",
+    "            pred_label, conf = predict_vehicle_class(crop_resized, model, idx_to_class, device=device)\n",
     "\n",
     "            group = map_to_lmv_hmv(pred_label)\n",
     "\n",
