--- a/notebooks/05_image_restoration_optional.ipynb
+++ b/notebooks/05_image_restoration_optional.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "454adf19",
    "metadata": {},
    "outputs": [
@@ -49,6 +49,7 @@
     }
    ],
    "source": [
+    "import sys\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -61,6 +62,12 @@
     "PROJECT_ROOT = Path().resolve().parent\n",
     "DATA_ROOT = PROJECT_ROOT / \"data\"\n",
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
+    "SRC_DIR = PROJECT_ROOT / \"src\"\n",
+    "\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
     "print(\"Project root:\", PROJECT_ROOT)\n",
     "print(\"Images root:\", IMAGES_ROOT)\n",
