--- a/notebooks/03_vehicle_classification_model.ipynb
+++ b/notebooks/03_vehicle_classification_model.ipynb
@@ -36,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
@@ -51,6 +52,12 @@
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
     "TRAIN_ANN_ROOT = DATA_ROOT / \"DETRAC-Train-Annotations\"\n",
     "CROPPED_DATA_PATH = PROJECT_ROOT / \"outputs\" / \"cropped_vehicle_dataset.npz\"\n",
+    "SRC_DIR = PROJECT_ROOT / \"src\"\n",
+    "\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"Images root:\", IMAGES_ROOT)\n",
@@ -162,46 +169,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VehicleClassifier(nn.Module):\n",
-    "    def __init__(self, num_classes: int):\n",
-    "        super().__init__()\n",
-    "        self.features = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(128),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(128, 256, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "        )\n",
-    "\n",
-    "        self.classifier = nn.Sequential(\n",
-    "            nn.Flatten(),\n",
-    "            nn.Linear(256 * 4 * 4, 256),  # adjust if our feature map size differs\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(0.5),\n",
-    "            nn.Linear(256, num_classes),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.features(x)\n",
-    "        x = self.classifier(x)\n",
-    "        return x\n",
-    "\n",
     "num_classes = len(class_to_idx)\n",
     "model = VehicleClassifier(num_classes=num_classes).to(DEVICE)\n",
+    "\n",
     "print(model)"
    ]
   },
@@ -497,102 +467,11 @@
     "import cv2\n",
     "import xml.etree.ElementTree as ET\n",
     "\n",
-    "# from src.utils_detrac import load_detrac_annotations\n",
-    "def load_detrac_annotations(xml_path: Path):\n",
-    "    \"\"\"\n",
-    "    Parse a UA-DETRAC XML file into a dict:\n",
-    "    { frame_num (int): [ { 'id': str, 'bbox': [x, y, w, h], 'class': str }, ... ] }\n",
-    "    \"\"\"\n",
-    "    tree = ET.parse(str(xml_path))\n",
-    "    root = tree.getroot()\n",
-    "\n",
-    "    annotations = {}\n",
-    "\n",
-    "    for frame in root.findall(\"frame\"):\n",
-    "        frame_num = int(frame.get(\"num\"))\n",
-    "\n",
-    "        target_list = frame.find(\"target_list\")\n",
-    "        if target_list is None:\n",
-    "            annotations[frame_num] = []\n",
-    "            continue\n",
-    "\n",
-    "        targets = []\n",
-    "        for target in target_list.findall(\"target\"):\n",
-    "            tid = target.get(\"id\")\n",
-    "\n",
-    "            box = target.find(\"box\")\n",
-    "            attr = target.find(\"attribute\")\n",
-    "            if box is None or attr is None:\n",
-    "                continue\n",
-    "\n",
-    "            left = float(box.get(\"left\"))\n",
-    "            top = float(box.get(\"top\"))\n",
-    "            width = float(box.get(\"width\"))\n",
-    "            height = float(box.get(\"height\"))\n",
-    "            vehicle_class = attr.get(\"vehicle_type\")\n",
-    "\n",
-    "            targets.append({\n",
-    "                \"id\": tid,\n",
-    "                \"bbox\": [left, top, width, height],\n",
-    "                \"class\": vehicle_class,\n",
-    "            })\n",
-    "\n",
-    "        annotations[frame_num] = targets\n",
-    "\n",
-    "    return annotations\n",
-    "\n",
     "# define TARGET_SIZE using the cropped dataset shape (to match training)\n",
     "# images: (N, H, W, 3)\n",
     "crop_h, crop_w = images.shape[1], images.shape[2]\n",
     "TARGET_SIZE = (crop_w, crop_h)  # (width, height) for cv2.resize\n",
     "print(\"CNN input size (W,H):\", TARGET_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cacdeff",
-   "metadata": {},
-   "source": [
-    "#### predict class for a single crop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b94aa367",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn.functional as F\n",
-    "\n",
-    "def predict_vehicle_class(crop_rgb_np, model, device=DEVICE):\n",
-    "    \"\"\"\n",
-    "    crop_rgb_np: numpy array (H, W, 3) in [0, 1] or [0, 255]\n",
-    "    Returns: (pred_label_str, confidence_float)\n",
-    "    \"\"\"\n",
-    "    # Ensure float32 [0,1]\n",
-    "    if crop_rgb_np.dtype != \"float32\":\n",
-    "        crop = crop_rgb_np.astype(\"float32\")\n",
-    "    else:\n",
-    "        crop = crop_rgb_np.copy()\n",
-    "\n",
-    "    if crop.max() > 1.0:\n",
-    "        crop /= 255.0\n",
-    "\n",
-    "    # (H,W,3) -> (1,3,H,W) tensor\n",
-    "    tensor = torch.from_numpy(crop).permute(2, 0, 1).unsqueeze(0).to(device)\n",
-    "\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        logits = model(tensor)\n",
-    "        probs = F.softmax(logits, dim=1)\n",
-    "        conf, pred_idx = probs.max(dim=1)\n",
-    "\n",
-    "    pred_idx = int(pred_idx.item())\n",
-    "    conf = float(conf.item())\n",
-    "    pred_label = idx_to_class[pred_idx]\n",
-    "\n",
-    "    return pred_label, conf"
    ]
   },
   {
@@ -666,7 +545,7 @@
     "        crop_resized = cv2.resize(crop, target_size)\n",
     "\n",
     "        # Predict class with the CNN\n",
-    "        pred_label, conf = predict_vehicle_class(crop_resized, model, device=device)\n",
+    "        pred_label, conf = predict_vehicle_class(crop_resized, model, idx_to_class, device=device)\n",
     "\n",
     "        # Draw bbox\n",
     "        rect = plt.Rectangle(\n",
@@ -797,7 +676,7 @@
     "        crop_resized = cv2.resize(crop, target_size)\n",
     "        crop_rgb = cv2.cvtColor(crop_resized, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "        pred_label, conf = predict_vehicle_class(crop_rgb, model, device=device)\n",
+    "        pred_label, conf = predict_vehicle_class(crop_rgb, model, idx_to_class, device=device)\n",
     "\n",
     "        # Draw bbox + label on vis (BGR)\n",
     "        cv2.rectangle(vis, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
