added test for mps for device

--- a/notebooks/03_vehicle_classification_model.ipynb
+++ b/notebooks/03_vehicle_classification_model.ipynb
@@ -59,7 +59,13 @@
     "\n",
     "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
-    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "if torch.cuda.is_available():\n",
+    "    DEVICE = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    DEVICE = torch.device(\"mps\")\n",
+    "else:  \n",
+    "    DEVICE = torch.device(\"cpu\")\n",
+    "\n",
     "print(\"Images root:\", IMAGES_ROOT)\n",
     "print(\"Train annotations root:\", TRAIN_ANN_ROOT)\n",
     "print(\"Using device:\", DEVICE)\n",
