--- a/notebooks/03_vehicle_classification_model.ipynb
+++ b/notebooks/03_vehicle_classification_model.ipynb
@@ -860,7 +860,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.12.4)",
+   "display_name": "masters",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
