gitignore for models

--- a/notebooks/03_vehicle_classification_model.ipynb
+++ b/notebooks/03_vehicle_classification_model.ipynb
@@ -34,7 +34,19 @@
    "execution_count": null,
    "id": "d9851c08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils_detrac'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(SRC_DIR) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys\u001b[38;5;241m.\u001b[39mpath:\n\u001b[1;32m     20\u001b[0m     sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mstr\u001b[39m(SRC_DIR))\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils_detrac\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available():\n\u001b[1;32m     25\u001b[0m     DEVICE \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils_detrac'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -47,7 +59,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import classification_report, ConfusionMatrixDisplay\n",
     "\n",
-    "PROJECT_ROOT = Path().resolve().parent\n",
+    "PROJECT_ROOT = Path().resolve()\n",
     "DATA_ROOT = PROJECT_ROOT / \"data\"\n",
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
     "TRAIN_ANN_ROOT = DATA_ROOT / \"DETRAC-Train-Annotations\"\n",
