--- a/notebooks/01_dataset_exploration.ipynb
+++ b/notebooks/01_dataset_exploration.ipynb
@@ -419,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.12.4)",
+   "display_name": "masters",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
