--- a/notebooks/02_preprocessing_and_cropping.ipynb
+++ b/notebooks/02_preprocessing_and_cropping.ipynb
@@ -1149,7 +1149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.12.4)",
+   "display_name": "masters",
    "language": "python",
    "name": "python3"
   },
@@ -1163,7 +1163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
