--- a/notebooks/04_vehicle_counting_and_analysis.ipynb
+++ b/notebooks/04_vehicle_counting_and_analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e1ff075",
    "metadata": {},
    "outputs": [
@@ -42,11 +42,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3\n",
-      "Images root: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3/data/DETRAC-Images\n",
-      "Train annotations root: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3/data/DETRAC-Train-Annotations\n",
-      "Cropped dataset path: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3/outputs/cropped_vehicle_dataset.npz\n",
-      "Model path: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3/models/vehicle_classifier.pth\n",
+      "Project root: /Users/victorhugogermano/Development/aai-521-final-project-g3\n",
+      "Images root: /Users/victorhugogermano/Development/aai-521-final-project-g3/data/DETRAC-Images\n",
+      "Train annotations root: /Users/victorhugogermano/Development/aai-521-final-project-g3/data/DETRAC-Train-Annotations\n",
+      "Cropped dataset path: /Users/victorhugogermano/Development/aai-521-final-project-g3/outputs/cropped_vehicle_dataset.npz\n",
+      "Model path: /Users/victorhugogermano/Development/aai-521-final-project-g3/models/vehicle_classifier.pth\n",
       "Using device: cpu\n"
      ]
     }
@@ -67,7 +67,7 @@
     "plt.style.use(\"seaborn-v0_8\")\n",
     "\n",
     "# Paths (adapt if your structure differs)\n",
-    "PROJECT_ROOT = Path().resolve().parent   # assumes notebooks/ one level below project root\n",
+    "PROJECT_ROOT = Path().resolve()   # assumes notebooks/ one level below project root\n",
     "DATA_ROOT = PROJECT_ROOT / \"data\"\n",
     "IMAGES_ROOT = DATA_ROOT / \"DETRAC-Images\"\n",
     "TRAIN_ANN_ROOT = DATA_ROOT / \"DETRAC-Train-Annotations\"\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6634dc35",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from: /Users/matthashemi/Documents/Personal/University/MS-AAI-Courses/07-AAI-521/aai-521-final-project-g3/models/vehicle_classifier.pth\n"
+      "Loaded model from: /Users/victorhugogermano/Development/aai-521-final-project-g3/models/vehicle_classifier.pth\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3d64e3ba",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dd06e517",
    "metadata": {},
    "outputs": [],
@@ -355,110 +355,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "87425fc3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded annotations for 664 frames from MVI_20011.xml\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "frame",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "time_sec",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "total_count",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "LMV_count",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "HMV_count",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Unknown_count",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "aa7e9315-dd08-431a-b281-353e9627577a",
-       "rows": [
-        [
-         "0",
-         "1",
-         "0.04",
-         "7",
-         "7",
-         "0",
-         "0"
-        ],
-        [
-         "1",
-         "2",
-         "0.08",
-         "7",
-         "7",
-         "0",
-         "0"
-        ],
-        [
-         "2",
-         "3",
-         "0.12",
-         "7",
-         "7",
-         "0",
-         "0"
-        ],
-        [
-         "3",
-         "4",
-         "0.16",
-         "7",
-         "7",
-         "0",
-         "0"
-        ],
-        [
-         "4",
-         "5",
-         "0.2",
-         "7",
-         "7",
-         "0",
-         "0"
-        ]
-       ],
-       "shape": {
-        "columns": 6,
-        "rows": 5
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -545,7 +447,7 @@
        "4      5      0.20            7          7          0              0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f97e4f60",
    "metadata": {},
    "outputs": [
@@ -624,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "6a189e02",
    "metadata": {},
    "outputs": [
@@ -666,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "71779df7",
    "metadata": {},
    "outputs": [
@@ -707,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "449aac64",
    "metadata": {},
    "outputs": [
@@ -771,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.12.4)",
+   "display_name": "masters",
    "language": "python",
    "name": "python3"
   },
@@ -785,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
