--- a/notebooks/04_vehicle_counting_and_analysis.ipynb
+++ b/notebooks/04_vehicle_counting_and_analysis.ipynb
@@ -646,10 +646,154 @@
   },
   {
    "cell_type": "markdown",
+   "id": "710bc043",
+   "metadata": {},
+   "source": [
+    "## 7. Traffic Prediction Using Time-Series Regression (Optional)\n",
+    "\n",
+    "We now treat the per-frame vehicle counts as a **time series** and build a simple\n",
+    "short-term traffic prediction model.\n",
+    "\n",
+    "Goal:\n",
+    "- Predict the **next frame's total vehicle count** from the previous `K` frames.\n",
+    "\n",
+    "This demonstrates how the outputs of our detection + classification pipeline\n",
+    "can be used for **traffic forecasting** at the sequence level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96c3f043",
+   "metadata": {},
+   "source": [
+    "#### build lag features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5c55624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# We will predict next-frame total_count using previous K frames\n",
+    "K = 5  # history length (you can change this)\n",
+    "\n",
+    "df = df_counts.copy().reset_index(drop=True)\n",
+    "\n",
+    "# Build lag features: total_count_{t-1}, ..., total_count_{t-K}\n",
+    "for lag in range(1, K + 1):\n",
+    "    df[f\"total_lag_{lag}\"] = df[\"total_count\"].shift(lag)\n",
+    "\n",
+    "# Drop initial rows with NaNs due to shifting\n",
+    "df_model = df.dropna().reset_index(drop=True)\n",
+    "\n",
+    "feature_cols = [f\"total_lag_{lag}\" for lag in range(1, K + 1)]\n",
+    "target_col = \"total_count\"\n",
+    "\n",
+    "X = df_model[feature_cols].values\n",
+    "y = df_model[target_col].values\n",
+    "\n",
+    "print(\"Feature shape:\", X.shape)\n",
+    "print(\"Target shape:\", y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d1d47e6",
+   "metadata": {},
+   "source": [
+    "#### train/test split + model + metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b911d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple train/test split along time (no shuffling, to respect temporal order)\n",
+    "# Use first 80% of frames for training, last 20% for testing\n",
+    "n = len(df_model)\n",
+    "split_idx = int(0.8 * n)\n",
+    "\n",
+    "X_train, X_test = X[:split_idx], X[split_idx:]\n",
+    "y_train, y_test = y[:split_idx], y[split_idx:]\n",
+    "\n",
+    "print(f\"Train size: {len(X_train)}, Test size: {len(X_test)}\")\n",
+    "\n",
+    "# Use a RandomForestRegressor as a simple non-linear baseline\n",
+    "rf = RandomForestRegressor(\n",
+    "    n_estimators=200,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1,\n",
+    ")\n",
+    "\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"Test MAE: {mae:.3f}\")\n",
+    "print(f\"Test R^2: {r2:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0312de54",
+   "metadata": {},
+   "source": [
+    "#### plot actual vs predicted over time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe2d2cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time axis for the test segment\n",
+    "time_test = df_model[\"time_sec\"].values[split_idx:]\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 4))\n",
+    "ax.plot(time_test, y_test, label=\"Actual total_count\", marker=\"o\")\n",
+    "ax.plot(time_test, y_pred, label=\"Predicted total_count\", marker=\"x\")\n",
+    "ax.set_xlabel(\"Time (seconds)\")\n",
+    "ax.set_ylabel(\"Total vehicle count\")\n",
+    "ax.set_title(f\"Traffic Prediction – {SEQ_ID} (K={K} previous frames)\")\n",
+    "ax.legend()\n",
+    "ax.grid(True, linestyle=\"--\", alpha=0.4)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f775a629",
+   "metadata": {},
+   "source": [
+    "### Interpretation – Traffic Prediction\n",
+    "\n",
+    "- The model learns to approximate how total vehicle count changes from\n",
+    "  frame to frame, using only the previous `K` frames.\n",
+    "- When the **R² score is reasonably high** and **MAE is small**, predictions\n",
+    "  follow the overall trend of the true counts.\n",
+    "- Sudden spikes or drops in traffic are harder to predict, which is a\n",
+    "  common challenge in real-world traffic forecasting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53673517",
    "metadata": {},
    "source": [
-    "## 7. Summary and Interpretation\n",
+    "## 8. Summary and Interpretation\n",
     "\n",
     "- We used the CNN's **predicted vehicle classes** to count:\n",
     "  - Total vehicles per frame\n",
@@ -660,6 +804,10 @@
     "  dominate or are rare.\n",
     "- The **histograms** summarize the overall distribution of traffic load\n",
     "  in this sequence (e.g., typical counts per frame, peak congestion).\n",
+    "- Using these per-frame counts as a **time series**, we trained a simple\n",
+    "  regression model (Random Forest) to **predict the next frame's total\n",
+    "  vehicle count** based on the previous `K` frames, demonstrating a basic\n",
+    "  short-term traffic forecasting capability.\n",
     "\n",
     "These figures and insights can be used in the final report to support\n",
     "statements such as:\n",
@@ -667,7 +815,10 @@
     "- \"Traffic is dominated by LMVs, with HMVs accounting for about P% on\n",
     "  average.\"\n",
     "- \"Certain time intervals show a higher concentration of heavy vehicles,\n",
-    "  which may relate to freight or bus traffic.\""
+    "  which may relate to freight or bus traffic.\"\n",
+    "- \"A simple time-series model can reasonably track short-term changes\n",
+    "  in traffic volume, capturing overall trends while sometimes\n",
+    "  underestimating sudden spikes in congestion.\""
    ]
   }
  ],
