--- a/notebooks/04_vehicle_counting_and_analysis.ipynb
+++ b/notebooks/04_vehicle_counting_and_analysis.ipynb
@@ -824,7 +824,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masters",
+   "display_name": "env (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
