modify the directories

--- a/notebooks/04_vehicle_counting_and_analysis.ipynb
+++ b/notebooks/04_vehicle_counting_and_analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5e1ff075",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     "\n",
     "from utils_detrac import load_detrac_annotations, VehicleClassifier, predict_vehicle_class\n",
     "\n",
-    "CROPPED_DATA_PATH = OUTPUT_ROOT / \"cropped_vehicle_dataset.npz\"\n",
+    "CROPPED_DATA_PATH = DATA_ROOT / \"cropped_vehicle_dataset.npz\"\n",
     "MODELS_DIR = PROJECT_ROOT / \"models\"\n",
     "MODEL_PATH = MODELS_DIR / \"vehicle_classifier.pth\"\n",
     "\n",
