--- a/notebooks/07_experiment_tensorflow_model.ipynb
+++ b/notebooks/07_experiment_tensorflow_model.ipynb
@@ -26,7 +26,13 @@
     "The full dataset is HUGE - \n",
     "- **20% of sequences** = 12 out of 60 video sequences\n",
     "- **Total samples created**: 96,570 vehicle images\n",
-    "- **Processing time**: Faster processing time"
+    "- **Processing time**: Faster processing time\n",
+    "\n",
+    "\n",
+    "> **Note:** This notebook is an **experimental TensorFlow + YOLO lab**.\n",
+    "> The final project pipeline uses the **PyTorch** notebooks:\n",
+    "> `03_vehicle_classification_model.ipynb`, `04_vehicle_counting_and_analysis.ipynb`,\n",
+    "> and `06_real_life_traffic_video_demo.ipynb`."
    ]
   },
   {
@@ -427,7 +433,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Balance Classes \n",
     "\n",
     "print(f\"\\n{'='*60}\")\n",
@@ -515,7 +520,7 @@
     "for class_idx, weight in class_weights.items():\n",
     "    print(f\"  {idx_to_class[class_idx]:12s}: {weight:.4f}\")\n",
     "\n",
-    "print(f\"\\nNote: Higher weight for '{minority_class_name}' = model focuses more on this class during training\")\n"
+    "print(f\"\\nNote: Higher weight for '{minority_class_name}' = model focuses more on this class during training\")"
    ]
   },
   {
@@ -619,7 +624,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Visualize Class Distribution and Sample Images\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -627,7 +631,6 @@
     "print(f\"\\n{'='*60}\")\n",
     "print(\"VISUALIZING CLASS DISTRIBUTION AND SAMPLES\")\n",
     "print(f\"{'='*60}\")\n",
-    "\n",
     "\n",
     "# Plot Class Distribution (Before and After Balancing)\n",
     "\n",
@@ -671,7 +674,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "\n",
     "\n",
     "# Show 5 Sample Images from Each Class\n",
     "\n",
@@ -728,7 +730,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "\n",
     "# Summary Statistics Table\n",
     "\n",
     "print(f\"\\n{'='*60}\")\n",
@@ -781,8 +782,7 @@
     "ax.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -1578,7 +1578,6 @@
     }
    ],
    "source": [
-    "\n",
     "# LMV/HMV Classification\n",
     "\n",
     "def map_to_lmv_hmv(predictions_4class, class_names):\n",
@@ -1635,7 +1634,7 @@
     "axes[1].set_xlabel('Predicted Label', fontsize=12)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1943,6 +1942,9 @@
     "\n",
     "This pipeline processes a video to detect, classify, and track vehicles (LMV/HMV) with **stable bounding boxes** using YOLOv8 and a custom CNN classifier. It eliminates flickering of bounding boxes by maintaining tracking across frames.\n",
     "\n",
+    "\n",
+    "> This section requires the `ultralytics` package and is **computationally heavy**.\n",
+    "> It is purely experimental and not part of the final evaluation.\n",
     "\n",
     "\n",
     "#### Features\n",
@@ -2432,6 +2434,28 @@
     "    cnn_confidence=0.75,\n",
     "    skip_frames=1  \n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a62b1163",
+   "metadata": {},
+   "source": [
+    "### Summary – Why This Notebook Exists\n",
+    "\n",
+    "This notebook contains **experimental work** that is _separate_ from the other notebooks:\n",
+    "\n",
+    "- A **TensorFlow/Keras** version of the vehicle classifier trained on a 20% subset of DETRAC.\n",
+    "- Experiments with **class balancing**, including:\n",
+    "  - Visualizing original vs balanced class distributions,\n",
+    "  - Training the CNN on a more balanced dataset.\n",
+    "- Evaluation of both:\n",
+    "  - Full **multi-class** performance (cars, vans, buses, others),\n",
+    "  - Collapsed **LMV/HMV** performance using 2-class confusion matrices.\n",
+    "- A prototype **YOLO + tracking** pipeline for vehicle detection in real video, which is heavier and not used in the final results.\n",
+    "\n",
+    "The main pipeline and project report are based on the **PyTorch** implementation.  \n",
+    "This notebook is kept as a **lab notebook / reference** for additional ideas and future extensions."
    ]
   }
  ],
